[b]Version 0.5.63 (not released yet)[/b]:

(2007-12-17)
 * Updated the Russian translation, and added regular expressions 
   (Advanced->MPlayer language) for Russian, sent by wiselord1983@gmail.com

(2007-12-14)
 * Now smplayer stores the version number of mplayer in the config file and
   can use it to know if that version provides some feature (like the 
   scaletempo filter) before running it. This makes possible to add
   "autodetection" too for options that should be passed on command line.
 * Now the option "High speed playback without altering pitch" (scaletempo) on 
   Preferences->General has 3 possible values: auto, yes and no. Auto 
   (the default) will use the scaletempo filter only if the mplayer you're
   using has that filter. "Yes" or "no" will force to use it or not, no matter
   of the mplayer version number.

(2007-12-13)
 * (Windows) Added patch by codeboost to improve the file associations code.
   See http://smplayer.sourceforge.net/forums/viewtopic.php?pid=470#p470
 * (By user request) Added the possibility to configure any of the mouse
   buttons to show the equalizer.
 * (Windows) Some clean up in the file associations code. Also made some
   changes to allow to compile in linux (for testing, file associations
   of course won't work, but I can see the dialog, translations and so on).

(2007-12-10)
 * (Internal change) Added mplayerversion.h and mplayerversion.cpp which
   parses the mplayer version from the output of mplayer. Inforeader can also
   get the mplayer version.
 * Now the size of OSD/subtitle text increases/decreases in steps of 0.20.

(2007-12-08)
 * Added a new option for the config file: use_volume_option. If set to 
   true, smplayer will set the initial volume using the command line option
   -volume in mplayer, so that should avoid that the volume is too loud on
   startup. But... mplayer doesn't have a -volume option yet, you have to
   patch it: